[hy-AM] update from Pootle (firefox)

--- a/hy-AM/browser/chrome/browser/devtools/shadereditor.properties
+++ b/hy-AM/browser/chrome/browser/devtools/shadereditor.properties
@@ -17,6 +17,7 @@ ToolboxShaderEditor.label=Շեյդերի խմբագրիչ
 
 # LOCALIZATION NOTE (ToolboxShaderEditor.panelLabel):
 # This is used as the label for the toolbox panel.
+ToolboxShaderEditor.panelLabel=Շեյդերի խմբագրիչի վահանակ
 
 # LOCALIZATION NOTE (ToolboxShaderEditor.tooltip):
 # This string is displayed in the tooltip of the tab when the Shader Editor is
