--- a/hy-AM/browser/chrome/browser/devtools/toolbox.properties
+++ b/hy-AM/browser/chrome/browser/devtools/toolbox.properties
@@ -49,6 +49,7 @@ options.label=Կարգավորումներ
 
 # LOCALIZATION NOTE (options.panelLabel): This is used as the label for the
 # toolbox panel.
+options.panelLabel=Գործիքագոտու ընտրանքների վահանակ
 
 # LOCALIZATION NOTE (options.toolNotSupported): This is the template
 # used to add a * marker to the label for the Options Panel tool checkbox for the
