--- a/hy-AM/dom/chrome/accessibility/AccessFu.properties
+++ b/hy-AM/dom/chrome/accessibility/AccessFu.properties
@@ -157,6 +157,7 @@ statePressed     =    սեղմած
 stateExpanded    =    ընդարձակված
 stateCollapsed   =    հավաքված
 stateUnavailable =    անհասանելի
+stateReadonly    =    readonly
 stateRequired    =    պահանջվում է
 stateTraversed   =    այցելած
 stateHasPopup    =    ունի pop up
