--- a/hy-AM/dom/chrome/plugins.properties
+++ b/hy-AM/dom/chrome/plugins.properties
@@ -21,3 +21,4 @@ description_label=Նկարագրություն
 suffixes_label=Սուֆիքս
 
 openH264_name=OpenH264 Video Codec, որը մատակարարում է Cisco Systems, Inc.-ը
+openH264_description=Տեսանյութերի և տեսազրույցի խաղարկում:
