--- a/hy-AM/security/manager/chrome/pipnss/nsserrors.properties
+++ b/hy-AM/security/manager/chrome/pipnss/nsserrors.properties
@@ -122,6 +122,10 @@ SSL_ERROR_NEXT_PROTOCOL_DATA_INVALID=SSL-ը ստացել է NPN ընդլայնմ
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SSL2=SSL հնարավորությունը չի աջակցում SSL 2.0 միացումներ:
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SERVERS=SSL հնարավորությունը չի աջակցվում սպասարկիչների համար։
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_CLIENTS=SSL հնարավորությունը չի աջակցվում ծրագրի համար։
+SSL_ERROR_RX_MALFORMED_HELLO_VERIFY_REQUEST=SSL-ը ստացավ կապի միացման վնասված Hello Verify Request handshake հարցում
+SSL_ERROR_RX_UNEXPECTED_HELLO_VERIFY_REQUEST=SSL-ը ստացավ անսպասելի Hello Verify Request handshake հաղորդագրություն:
+SSL_ERROR_RX_UNEXPECTED_CERT_STATUS=SSL-ը անսպասելիորեն ստացավ Certificate Status handshake  հաղորդագրություն:
+SSL_ERROR_DIGEST_FAILURE=Digest ֆունկցիայի սխալ:
 SEC_ERROR_IO=Մ/Ե սխալ տեղի ունեցավ անվտանգության ավտորիզացիայի ժամանակ:
 SEC_ERROR_LIBRARY_FAILURE=անվտանգության գրադարանի սխալ:
 SEC_ERROR_BAD_DATA=անվտանգության գրադարան` ստացվել են վատ տվյալներ:
