--- a/hy-AM/toolkit/chrome/global/resetProfile.properties
+++ b/hy-AM/toolkit/chrome/global/resetProfile.properties
@@ -7,6 +7,6 @@
 # LOCALIZATION NOTE (resetUnusedProfile.message): %S is brandShortName.
 resetUnusedProfile.message=Կարծես դուք դեռ չեք բացել %S-ը: Ցանկանու՞մ եք այն մաքրել և սկսել աշխատանքը ինչպես որ առաջին անգամ: Եվ ի դեպ, Բարի Գալուստ :)\u0020
 
-# LOCALIZATION NOTE (resetProfile.resetButton.label): %S is brandShortName.
-resetProfile.resetButton.label=Վերակայել %S-ը…
-resetProfile.resetButton.accesskey=e
+# LOCALIZATION NOTE (refreshProfile.resetButton.label): %S is brandShortName.
+refreshProfile.resetButton.label=Թարմացնել %S-ը…
+refreshProfile.resetButton.accesskey=ա
