--- a/hy-AM/browser/chrome/browser/browser.properties
+++ b/hy-AM/browser/chrome/browser/browser.properties
@@ -103,16 +103,9 @@ popupShowPopupPrefix=Ցուցադրել '%S'
 badContentBlocked.blocked.message=%S-ը արգելափակում է այս էջի պարունակությունը:
 badContentBlocked.notblocked.message=%S-ը արգելափակում է այս էջի ամբողջ բովանդակությունը:
 
-# missing plugin installer
-installPlugin.message = Ցանկանու՞մ եք տեղակայել անհրաժեշտ բաղադրիչը տվյալ էջում մեդիան դիտելու համար:               \u0020
-installPlugin.button.label=Տեղադրել %S
-installPlugin.button.accesskey=Տ
-installPlugin.ignoreButton.label=Այլևս չհարցնել
-installPlugin.ignoreButton.accesskey=ս
-
 crashedpluginsMessage.title=%S բաղադրիչը վնասվեց:
-crashedpluginsMessage.reloadButton.label=Վերբեռնել էջը
-crashedpluginsMessage.reloadButton.accesskey=Վ
+crashedpluginsMessage.reloadButton.label=Կրկին բեռնել էջը
+crashedpluginsMessage.reloadButton.accesskey=Կ
 crashedpluginsMessage.submitButton.label=Տեղեկացնել վթարի մասին
 crashedpluginsMessage.submitButton.accesskey=Տ
 crashedpluginsMessage.learnMore=Իմանալ Ավելին…
@@ -562,13 +555,18 @@ getUserMedia.stopSharing.accesskey = Կ
 
 getUserMedia.sharingMenu.label = Սարքերը տարածող ներդիրներ
 getUserMedia.sharingMenu.accesskey = Ս
-# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
-#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
-#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
+#                    getUserMedia.sharingMenuMicrophone,
+#                    getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen,
+#                    getUserMedia.sharingMenuWindow,
 #                    getUserMedia.sharingMenuCameraMicrophone,
 #                    getUserMedia.sharingMenuCameraMicrophoneApplication,
 #                    getUserMedia.sharingMenuCameraMicrophoneScreen,
 #                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuCameraApplication,
+#                    getUserMedia.sharingMenuCameraScreen,
+#                    getUserMedia.sharingMenuCameraWindow,
 #                    getUserMedia.sharingMenuMicrophoneApplication,
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
@@ -582,6 +580,9 @@ getUserMedia.sharingMenuCameraMicrophone = %S (ապարատ և խոսափող)
 getUserMedia.sharingMenuCameraMicrophoneApplication = %S (ապարատ, խոսափող և հավելված)
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (ապարատ, խոսափող և էկրան)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (ապարատ, խոսափող և պատուհան)
+getUserMedia.sharingMenuCameraApplication = %S (ապարատ և ծրագիր)
+getUserMedia.sharingMenuCameraScreen = %S (ապարատ և ծրագիր)
+getUserMedia.sharingMenuCameraWindow = %S (ապարատ և պատուհան)
 getUserMedia.sharingMenuMicrophoneApplication = %S (խոսափող և հավելված)
 getUserMedia.sharingMenuMicrophoneScreen = %S (խոսափող և էկրան)
 getUserMedia.sharingMenuMicrophoneWindow = %S (խոսափող և պատուհան)
@@ -603,3 +604,12 @@ slowStartup.disableNotificationButton.accesskey = չ
 customizeTips.tip0 = %1$S. կարող եք կարգավորել %2$S-ը ըստ ձեր հայեցողության։ Պարզապես ցանկից վերցրեք ցանկացածը և տեղափոխեք։ %3$S՝ կարգավորելու %2$S-ը։
 customizeTips.tip0.hint = Հուշում
 customizeTips.tip0.learnMore = Իմանալ ավելին
+
+# LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
+# the appmenu labels and buttons that appear when an update is staged for
+# installation or a background update has failed and a manual download is required.
+# %S is brandShortName
+appmenu.restartNeeded.description = Թարմացնելու համար վերամեկնարկեք %S-ը
+appmenu.updateFailed.description = Թարմացումը խորապատկերումը ձախողվեց, ներբեռնեք այն:
+appmenu.restartBrowserButton.label = Վերաբացել %S-ը
+appmenu.downloadUpdateButton.label = Ներբեռնել թարմացումը
