--- a/hy-AM/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/hy-AM/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,8 +97,19 @@ quit-button.tooltiptext.linux2 = Փակել %1$S (%2$S)-ը
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Փակել %1$S (%2$S)-ը
 
+loop-call-button2.label = Սկսել երկխոսություն
+loop-call-button2.tooltiptext = Սկսել երկխոսություն\u0020
+
+social-share-button.label = Տարածել էջը
+social-share-button.tooltiptext = Տարածել էջը
+
 panic-button.label = Մոռանալ
 panic-button.tooltiptext = Մոռանալ դիտարկման որոշ պատմությունը
 
-loop-call-button.label = Հրավիրել զրույցի
-loop-call-button.tooltiptext = Հրավիրել զրույցի
+web-apps-button.label = Ծրագրեր
+web-apps-button.tooltiptext = Բացահայտել հավելվածներ
+
+# LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
+# widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
+devtools-webide-button.label = WebIDE
+devtools-webide-button.tooltiptext = Բացել WebIDE-ին
