--- a/hy-AM/browser/chrome/browser/devtools/inspector.properties
+++ b/hy-AM/browser/chrome/browser/devtools/inspector.properties
@@ -39,6 +39,7 @@ inspector.accesskey=Տ
 
 # LOCALIZATION NOTE (inspector.panelLabel.*)
 # Labels applied to the panel and views within the panel in the toolbox
+inspector.panelLabel=Տեսուչի վահանակ
 
 # LOCALIZATION NOTE (markupView.more.*)
 # When there are too many nodes to load at once, we will offer to
