--- a/hy-AM/browser/chrome/browser/devtools/netmonitor.properties
+++ b/hy-AM/browser/chrome/browser/devtools/netmonitor.properties
@@ -17,6 +17,7 @@ netmonitor.label=Ցանցը
 
 # LOCALIZATION NOTE (netmonitor.panelLabel):
 # This is used as the label for the toolbox panel.
+netmonitor.panelLabel=Ցանցի վահանակը
 
 # LOCALIZATION NOTE (netmonitor.commandkey, netmonitor.accesskey)
 # Used for the menuitem in the tool menu
