--- a/hy-AM/browser/chrome/browser/devtools/profiler.properties
+++ b/hy-AM/browser/chrome/browser/devtools/profiler.properties
@@ -13,13 +13,16 @@
 # LOCALIZATION NOTE (profiler.label):
 # This string is displayed in the title of the tab when the profiler is
 # displayed inside the developer tools window and in the Developer Tools Menu.
+profiler.label2=Արտադրողականություն
 
 # LOCALIZATION NOTE (profiler.panelLabel):
 # This is used as the label for the toolbox panel.
+profiler.panelLabel2=Արտադրողականության վահանակ
 
 # LOCALIZATION NOTE (profiler2.commandkey, profiler.accesskey)
 # Used for the menuitem in the tool menu
 profiler.commandkey2=VK_F5
+profiler.accesskey=P
 
 # LOCALIZATION NOTE (profiler.tooltip2):
 # This string is displayed in the tooltip of the tab when the profiler is
@@ -33,10 +36,12 @@ noRecordingsText=Դեռևս չկան պրոֆիլներ:
 # LOCALIZATION NOTE (recordingsList.itemLabel):
 # This string is displayed in the recordings list of the Profiler,
 # identifying a set of function calls.
+recordingsList.itemLabel=#%S-ի գրառում
 
 # LOCALIZATION NOTE (recordingsList.recordingLabel):
 # This string is displayed in the recordings list of the Profiler,
 # for an item that has not finished recording.
+recordingsList.recordingLabel=Ընթացքում է…
 
 # LOCALIZATION NOTE (recordingsList.durationLabel):
 # This string is displayed in the recordings list of the Profiler,
@@ -51,16 +56,22 @@ recordingsList.saveLabel=Պահպանել
 # LOCALIZATION NOTE (profile.tab):
 # This string is displayed in the profile view for a tab, after the
 # recording has finished, as the recording 'start → stop' range in milliseconds.
+profile.tab=%1$S մվ → %2$S մվ
 
 # LOCALIZATION NOTE (graphs.fps):
 # This string is displayed in the framerate graph of the Profiler,
 # as the unit used to measure frames per second. This label should be kept
 # AS SHORT AS POSSIBLE so it doesn't obstruct important parts of the graph.
+graphs.fps=fps
 
 # LOCALIZATION NOTE (category.*):
 # These strings are displayed in the categories graph of the Profiler,
 # as the legend for each block in every bar. These labels should be kept
 # AS SHORT AS POSSIBLE so they don't obstruct important parts of the graph.
+category.other=Gecko
+category.css=Ոճեր
+category.js=JIT
+category.gc=GC
 category.network=Ցանցը
 category.graphics=Գրաֆիկա
 category.storage=Կրիչ
@@ -71,6 +82,7 @@ category.storage=Կրիչ
 # LOCALIZATION NOTE (table.url.tooltiptext):
 # This string is displayed in the call tree as the tooltip text for the url
 # labels which, when clicked, jump to the debugger.
+table.url.tooltiptext=Աղբյուրը դիտել Վրիպազերծիչում
 
 # LOCALIZATION NOTE (table.zoom.tooltiptext):
 # This string is displayed in the call tree as the tooltip text for the 'zoom'
@@ -78,6 +90,7 @@ category.storage=Կրիչ
 
 # LOCALIZATION NOTE (recordingsList.saveDialogTitle):
 # This string is displayed as a title for saving a recording to disk.
+recordingsList.saveDialogTitle=Պահպանել պրոֆիլը…
 
 # LOCALIZATION NOTE (recordingsList.saveDialogJSONFilter):
 # This string is displayed as a filter for saving a recording to disk.
