--- a/hy-AM/browser/chrome/browser/devtools/webide.properties
+++ b/hy-AM/browser/chrome/browser/devtools/webide.properties
@@ -2,6 +2,7 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+title_noApp=Firefox WebIDE
 
 
 mainProcess_label=Հիմնական գործընթացը
@@ -9,6 +10,10 @@ mainProcess_label=Հիմնական գործընթացը
 
 
 notification_showTroubleShooting_label=Խափանաշտկում
+
+# LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
+# title for browser tab projects when the tab is still loading.
+project_tab_loading=Բեռնում...
 
 # These messages appear in a notification box when an error occur.
 
