--- a/hy-AM/browser/chrome/browser/newTab.properties
+++ b/hy-AM/browser/chrome/browser/newTab.properties
@@ -12,14 +12,19 @@ newtab.sponsored.button=ՀՈՎԱՆԱՎՈՐՎԱԾ
 # LOCALIZATION NOTE(newtab.sponsored.explain): %1$S will be replaced inline by
 # the (X) block icon. %2$S will be replaced by an active link using string
 # newtab.learn.link as text.
+newtab.sponsored.explain=Այս դրվագը ցուցադրվում է ձեզ որպես Mozilla-ի գործընկեր: Կարող եք այն հեռացնել ցանկացած պահի՝ սեղմելով %1$S: %2$S
 # LOCALIZATION NOTE(newtab.enhanced.explain): %1$S will be replaced inline by
 # the gear icon used to customize the new tab window. %2$S will be replaced by
 # an active link using string newtab.learn.link as text.
+newtab.enhanced.explain=Mozilla-ի գործընկերը տեսողական լավարկել է այս դրվագը՝ փոխարինելով էկրանի պատկերը: Կարող եք անջատել լավարկված դրվագը սեղմելով %1$S՝ ձեր նախապատվությունների համար: %2$S \u0020
 # LOCALIZATION NOTE(newtab.intro.paragraph1): %1$S will be replaced inline by
 # active link using string newtab.learn.link as text.
+newtab.intro.paragraph1=Նոր ներդիր բացելիս կտեսնեք դրվագներ այն կայքերից, որոնք առավել հաճախակի եք այցելել, ինչպես նաև դրվագներ այն կայքերից, որոնք մեր կարծիքով կհետաքրքրեն ձեզ: Այդ դրվագներից որոշները կարող են հովանավորված լինել Mozilla-ի գործընկերների կողմից: Մենք կհուշենք ձեզ, թե որ դրվագն է հովանավորված: %1$S
 # LOCALIZATION NOTE(newtab.intro.paragraph2): %1$S will be replaced inline by
 # active link using string newtab.privacy.link as text.
+newtab.intro.paragraph2=Այս ծառայությունը մատուցելիս Mozilla-ն հավաքում է և օգտագործում որոշակի վերլուծական տեղեկատվություն՝ կապված ձեր կողմից դրվագները օգտագործելու հետ՝ համաձայն մեր %1$Sի:
 # LOCALIZATION NOTE(newtab.intro.paragraph3): %1$S will be replaced inline by
 # the gear icon used to customize the new tab window.
+newtab.intro.paragraph3=Կարող եք անջատել դրվագները՝ սեղմելով %1$S:
 newtab.learn.link=Իմանալ ավելին…
-newtab.privacy.link=Գաղտնիության Դրույթները
+newtab.privacy.link=Գաղտնիության Դրույթներ
