--- a/hy-AM/browser/chrome/browser/places/places.properties
+++ b/hy-AM/browser/chrome/browser/places/places.properties
@@ -75,16 +75,17 @@ OrganizerQueryDownloads=Բեռնումներ
 OrganizerQueryAllBookmarks=Բոլոր էջանիշերը
 OrganizerQueryTags=Կցապիտակներ
 
-# LOCALIZATION NOTE (tagResultLabel) :
+# LOCALIZATION NOTE (tagResultLabel, bookmarkResultLabel, switchtabResultLabel,
+# keywordResultLabel, searchengineResultLabel)
 # Noun used to describe the location bar autocomplete result type
 # to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
+# See createResultLabel() in urlbarBindings.xml
 tagResultLabel=Նշում
-# LOCALIZATION NOTE (bookmarkResultLabel) :
-# Noun used to describe the location bar autocomplete result type
-# to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
 bookmarkResultLabel=Էջանիշ
+switchtabResultLabel=Ներդիր
+keywordResultLabel=Հիմնաբառ
+searchengineResultLabel=Որոնում
+
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
