--- a/hy-AM/browser/chrome/browser/shellservice.properties
+++ b/hy-AM/browser/chrome/browser/shellservice.properties
@@ -7,6 +7,9 @@ safeModeLabel=%S-ի &Հուսալի Աշխատակերպ
 
 # LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
 # %S will be replaced by brandShortName
+setDefaultBrowserMessage2          = Ստացեք %S-ի բոլոր առավելությունները՝ հաստատելով այն որպես հիմնական դիտարկիչ
+setDefaultBrowserConfirm.label     = %S-ը օգտագործել որպես հիմնական դիտարկիչ
+setDefaultBrowserConfirm.accesskey = %
 setDefaultBrowserOptions.label     = Կարգավորումներ
 setDefaultBrowserOptions.accesskey = Կ
 setDefaultBrowserNotNow.label      = Ոչ Հիմա
