--- a/hy-AM/browser/chrome/browser/webrtcIndicator.properties
+++ b/hy-AM/browser/chrome/browser/webrtcIndicator.properties
@@ -7,7 +7,14 @@
 # LOCALIZATION NOTE (webrtcIndicator.windowtitle): %S is the brand name (e.g. Firefox).
 # This string is used so that the window has a title in tools that enumerate/look for window
 # titles. It is not normally visible anywhere.
+webrtcIndicator.windowtitle = %S՝ համաօգտագործման ցուցիչ
 
+webrtcIndicator.sharingCameraAndMicrophone.tooltip = Ձեր ապարատը և խոսափողը համաօգտագործվում են: Սեղմեք՝ կառավարելու համար:
+webrtcIndicator.sharingCamera.tooltip              = Ձեր ապարատը  համաօգտագործվում է: Սեղմեք՝ կառավարելու համար:
+webrtcIndicator.sharingMicrophone.tooltip          = Ձեր խոսափողը համաօգտագործվում է: Սեղմեք՝ կառավարելու համար:
+webrtcIndicator.sharingApplication.tooltip = Հավելվածը համաօգտագործվում է: Սեղմեք՝ կառավարելու համար:
+webrtcIndicator.sharingScreen.tooltip = Էկրանը համաօգտագործվում է: Սեղմեք՝ կառավարելու համար:
+webrtcIndicator.sharingWindow.tooltip = Պատուհանը համաօգտագործվում է: Սեղմեք՝ կառավարելու համար:
 
 
 # LOCALIZATION NOTE : The following strings are only used on Mac for
@@ -15,20 +22,32 @@
 
 # LOCALIZATION NOTE (webrtcIndicator.sharing*With.menuitem):
 # %S is the title of the tab using the share.
+webrtcIndicator.sharingCameraWith.menuitem = Համաօգտագործել ապարատը "%S"-ի հետ
+webrtcIndicator.sharingMicrophoneWith.menuitem = Համաօգտագործել խոսափողը "%S"-ի հետ
+webrtcIndicator.sharingApplicationWith.menuitem = Համաօգտագործել հավելվածը "%S"-ի հետ
+webrtcIndicator.sharingScreenWith.menuitem = Համաօգտագործել էկրանը "%S"-ի հետ
+webrtcIndicator.sharingWindowWith.menuitem = Համաօգտագործել պատուհանը "%S"-ի հետ
+webrtcIndicator.controlSharing.menuitem = Կառավարել համաօգտագործումը
 # LOCALIZATION NOTE (webrtcIndicator.sharingCameraWithNTabs.menuitem):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
+webrtcIndicator.sharingCameraWithNTabs.menuitem = Համաօգտագործել ապարատը #1 ներդիրի հետ;Համաօգտագործել ապարատը #1 ներդիրների հետ
 # LOCALIZATION NOTE (webrtcIndicator.sharingMicrophoneWithNTabs.menuitem):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
+webrtcIndicator.sharingMicrophoneWithNTabs.menuitem = Համաօգտագործել խոսափողը #1 ներդիրի հետ;Համաօգտագործել խոսափողը #1 ներդիրների հետ
 # LOCALIZATION NOTE (webrtcIndicator.sharingApplicationWithNTabs.menuitem):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
+webrtcIndicator.sharingApplicationWithNTabs.menuitem = Համաօգտագործել հավելվածը #1 ներդիրի հետ;Համաօգտագործել հավելվածը #1 ներդիրների հետ
 # LOCALIZATION NOTE (webrtcIndicator.sharingScreenWithNTabs.menuitem):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
+webrtcIndicator.sharingScreenWithNTabs.menuitem = Համաօգտագործել էկրանը #1 ներդիրի հետ;Համաօգտագործել էկրանը #1 ներդիրների հետ
 # LOCALIZATION NOTE (webrtcIndicator.sharingWindowWithNTabs.menuitem):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
+webrtcIndicator.sharingWindowWithNTabs.menuitem = Համաօգտագործել պատուհանը #1 ներդիրի հետ;Համաօգտագործել պատուհանը #1 ներդիրների հետ
 # LOCALIZATION NOTE (webrtcIndicator.controlSharingOn.menuitem):
 # %S is the title of the tab using the share.
+webrtcIndicator.controlSharingOn.menuitem = Կառավարել համաօգտագործումը "%S"-ում
