[ne-NP] update from Pootle (firefox)

--- a/ne-NP/browser/chrome/browser/browser.properties
+++ b/ne-NP/browser/chrome/browser/browser.properties
@@ -98,13 +98,6 @@ popupShowPopupPrefix='%S' देखाउनुहोस्
 # Bad Content Blocker Doorhanger Notification
 # %S is brandShortName
 
-# missing plugin installer
-installPlugin.message = के तपाईँ यो पृष्ठमा भएका मिडियाहरु देखाउन चाहिने प्लगिन इन्स्टल गर्न चाहनुहुन्छ?
-installPlugin.button.label=%S इन्स्टल गर
-installPlugin.button.accesskey=I
-installPlugin.ignoreButton.label=फेरि नसोध्नुहोस्
-installPlugin.ignoreButton.accesskey=n
-
 crashedpluginsMessage.title=%S प्लगिन क्र्याश भयो।
 crashedpluginsMessage.reloadButton.label=पृष्ठ पुन:लोड गर
 crashedpluginsMessage.reloadButton.accesskey=प
@@ -515,13 +508,18 @@ getUserMedia.continueSharing.accesskey = C
 getUserMedia.stopSharing.label = बाँड्न रोक्नुहोस्
 getUserMedia.stopSharing.accesskey = S
 
-# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
-#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
-#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
+#                    getUserMedia.sharingMenuMicrophone,
+#                    getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen,
+#                    getUserMedia.sharingMenuWindow,
 #                    getUserMedia.sharingMenuCameraMicrophone,
 #                    getUserMedia.sharingMenuCameraMicrophoneApplication,
 #                    getUserMedia.sharingMenuCameraMicrophoneScreen,
 #                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuCameraApplication,
+#                    getUserMedia.sharingMenuCameraScreen,
+#                    getUserMedia.sharingMenuCameraWindow,
 #                    getUserMedia.sharingMenuMicrophoneApplication,
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
@@ -539,3 +537,9 @@ slowStartup.disableNotificationButton.accesskey = A
 # in customizeTips.tip0.hint, %2$S will be replaced with brandShortName, %3$S will
 # be replaced with a hyperlink containing the text defined in customizeTips.tip0.learnMore.
 customizeTips.tip0.hint = सुझाव
+
+# LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
+# the appmenu labels and buttons that appear when an update is staged for
+# installation or a background update has failed and a manual download is required.
+# %S is brandShortName
+appmenu.restartBrowserButton.label = पुन सुचारु गर्नुहोस् %S
