--- a/ne-NP/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/ne-NP/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -78,3 +78,9 @@ quit-button.tooltiptext.linux2 = अन्त्य %1$S (%2$S)
 # %2$S is the keyboard shortcut
 
 
+
+
+web-apps-button.label = एप्स
+
+# LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
+# widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
