--- a/ne-NP/dom/chrome/accessibility/AccessFu.properties
+++ b/ne-NP/dom/chrome/accessibility/AccessFu.properties
@@ -7,11 +7,46 @@ screenReaderStarted = दृष्ति वाचक शुरु भयो
 screenReaderStopped = दृष्ति वाचक बन्द भयो
 
 # Roles
+menubar        =       मेनु पट्टी
+scrollbar      =       स्क्रोल पट्टी
+grip           =       पकड
+alert          =       सतर्कता
+menupopup      =       मेनु पपअप
+document       =       कागजात
+pane           =       फलक
+dialog         =       संवाद
+separator      =       विभाजक
+toolbar        =       उपकरणपट्टी
+statusbar      =       वस्तुस्थिति पट्टी
 table          =       तालिका
+columnheader   =       स्तम्भ हेडर
+rowheader      =       पङ्क्ति हेडर
+column         =       स्तम्भ
+row            =       पङ्क्ति
+cell           =       कक्ष
 link           =       लिङ्क
+list           =       सूची
+listitem       =       सूची वस्तु
 pushbutton     =       बटन
+spinbutton     =       स्पिन बटन
+diagram        =       रेखाचित्र
+animation      =       एनिमेसन
+equation       =       समिकरण
+buttonmenu     =       बटन मेनु
+whitespace     =       सेतो खाली स्थान
+pagetablist    =       ट्याब सूची
+canvas         =       क्यानभास
+checkmenuitem  =       मेनु वस्तु जाँच्नुहोस्
 passwordtext   =       पासवर्ड पाठ
+caption        =       क्याप्सन
+heading        =       शीर्षक
+section        =       खण्ड
+comboboxlist   =       कम्बो बाकस सूची
+comboboxoption =       कम्बो बाकस विकल्प
 imagemap       =       छवि मानचित्र
+listboxoption  =       विकल्प
+listbox        =       सूची बाकस
+flatequation   =       च्याप्टो समिकरण
 figure         =       स्वरूप
 
 # More sophisticated roles which are not actual numeric roles
@@ -123,12 +158,46 @@ quicknav_Table       = तालिकाहरू
 quicknav_Checkbox    = ठीकचिन्ह लगाउने बाकस
 
 # Shortened role names for braille
+menubarAbbr        =       मेनु पट्टी
+scrollbarAbbr      =       स्क्रोल पट्टी
+gripAbbr           =       पकड
+alertAbbr          =       सतर्कता
+menupopupAbbr      =       मेनु पपअप
+documentAbbr       =       कागजात
+paneAbbr           =       फलक
+dialogAbbr         =       संवाद
+separatorAbbr      =       विभाजक
 tableAbbr          =       tbl
+cellAbbr           =       कक्ष
 linkAbbr           =       lnk
+listAbbr           =       सूची
+listitemAbbr       =       सूची वस्तु
+outlineAbbr        =       रूपरेखा
+outlineitemAbbr    =       वस्तुको बाह्यरेखा
+pagetabAbbr        =       ट्याब
+propertypageAbbr   =       स्वामित्व पृष्ठ
+graphicAbbr        =       ग्राफिक
 pushbuttonAbbr     =       btn
+checkbuttonAbbr    =       ठीकचिन्ह बटन
+canvasAbbr         =       क्यानभास
+checkmenuitemAbbr  =       मेनु वस्तु जाँच्नुहोस्
+labelAbbr          =       लेबल
 passwordtextAbbr   =       passwdtxt
+radiomenuitemAbbr  =       रेडियो मेनु सूची
+textcontainerAbbr  =       पाठ भाँडो
+togglebuttonAbbr   =       टगल बटन
+treetableAbbr      =       ट्रि तालिका
+headerAbbr         =       हेडर
+footerAbbr         =       फूटर
 imagemapAbbr       =       imgmap
+listboxAbbr        =       सूची बाकस
+flatequationAbbr   =       च्याप्टो समिकरण
+gridcellAbbr       =       ग्रिडसेल
+noteAbbr           =       द्रष्टव्य
 figureAbbr         =       fig
+definitionlistAbbr =       परिभाषा सूची
+termAbbr           =       शर्त
+definitionAbbr     =       परिभाषा
 textareaAbbr       =       txtarea
 
 # LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
@@ -141,3 +210,4 @@ tblColumnInfoAbbr = #1c;#1c
 tblRowInfoAbbr = #1r;#1r
 cellInfoAbbr = c%Sr%S
 
+stateCheckedAbbr = (x)
