--- a/ne-NP/browser/chrome/browser/devtools/webide.properties
+++ b/ne-NP/browser/chrome/browser/devtools/webide.properties
@@ -9,6 +9,10 @@ mainProcess_label=मुख्य प्रक्रिया
 
 
 
+# LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
+# title for browser tab projects when the tab is still loading.
+project_tab_loading=लोड हुँदैछ...
+
 # These messages appear in a notification box when an error occur.
 
 
