--- a/ne-NP/browser/chrome/browser/places/places.properties
+++ b/ne-NP/browser/chrome/browser/places/places.properties
@@ -45,14 +45,14 @@ OrganizerQueryHistory=इतिहास
 OrganizerQueryDownloads=डाउनलोडहरू
 OrganizerQueryAllBookmarks=सबै पुस्तकचिनोहरु
 
-# LOCALIZATION NOTE (tagResultLabel) :
+# LOCALIZATION NOTE (tagResultLabel, bookmarkResultLabel, switchtabResultLabel,
+# keywordResultLabel, searchengineResultLabel)
 # Noun used to describe the location bar autocomplete result type
 # to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
-# LOCALIZATION NOTE (bookmarkResultLabel) :
-# Noun used to describe the location bar autocomplete result type
-# to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
+# See createResultLabel() in urlbarBindings.xml
+switchtabResultLabel=ट्याब
+keywordResultLabel=शब्दकुञ्जी
+
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
