[ro] update from Pootle (firefox)

--- a/ro/webapprt/webapprt/overrides/dom.properties
+++ b/ro/webapprt/webapprt/overrides/dom.properties
@@ -42,7 +42,9 @@ FormValidationTimeRangeOverflow=Vă rugăm să selectați o valoare care nu este
 # LOCALIZATION NOTE (FormValidationNumberRangeUnderflow): %S is a number.
 FormValidationNumberRangeUnderflow=Vă rugăm să selectați o valoare care nu este mai mică decât %S.
 # LOCALIZATION NOTE (FormValidationDateRangeUnderflow): %S is a date.
+FormValidationDateRangeUnderflow=Vă rugăm să selectați o valoare care nu este mai mare de %S.
 # LOCALIZATION NOTE (FormValidationTimeRangeUnderflow): %S is a time.
+FormValidationTimeRangeUnderflow=Vă rugăm să selectați o valoare care este mai mică decât %S.
 # LOCALIZATION NOTE (FormValidationStepMismatch): both %S can be a number, a date or a time.
 FormValidationStepMismatch=Please select a valid value. The two nearest valid values are %S and %S.
 # LOCALIZATION NOTE (FormValidationStepMismatchOneValue): %S can be a number, a date or a time. This is called instead of FormValidationStepMismatch when the second value is the same as the first.
