[sv-SE] update from Pootle (firefox)

--- a/sv-SE/browser/chrome/browser/browser.properties
+++ b/sv-SE/browser/chrome/browser/browser.properties
@@ -610,5 +610,6 @@ customizeTips.tip0.learnMore = Läs mer
 # installation or a background update has failed and a manual download is required.
 # %S is brandShortName
 appmenu.restartNeeded.description = Starta om %S för att verkställa uppdateringar
+appmenu.updateFailed.description = Bakgrundsuppdatering misslyckades, var vänlig ladda ner uppdatering
 appmenu.restartBrowserButton.label = Starta om %S
 appmenu.downloadUpdateButton.label = Ladda ner Uppdatering
