--- a/sv-SE/browser/chrome/browser/downloads/downloads.properties
+++ b/sv-SE/browser/chrome/browser/downloads/downloads.properties
@@ -47,6 +47,7 @@ stateDirty=Blockerad: Kan innehålla virus eller spionprogram
 # Note: These strings don't exist in the UI yet.  See bug 1053890.
 blockedMalware=Denna fil innehåller ett virus eller malmware.
 blockedPotentiallyUnwanted=Denna fil kan skada din dator.
+blockedUncommon=Den här filen kan vara farlig att öppna
 
 # LOCALIZATION NOTE (unblockHeader, unblockTypeMalware,
 #                    unblockTypePotentiallyUnwanted, unblockTypeUncommon,
@@ -56,7 +57,12 @@ blockedPotentiallyUnwanted=Denna fil kan skada din dator.
 # descending order by the unblockType strings, it is higher for files detected
 # as malware and lower for uncommon downloads.
 # Note: These strings don't exist in the UI yet.  See bug 1053890.
-unblockButtonContinue=Avblockera allafall
+unblockHeader=Är du säker på att du vill göra den här filen åtkomlig?
+unblockTypeMalware=Den här filen innehåller ett virus eller annat farligt program som kan skada din dator.\u0020
+unblockTypeUncommon=Denna fil har laddats ner från en okänd och möjligtvis farlig hemsida och kan vara skadlig för din dator att öppna.
+unblockTip=Du kan söka efter en alternativ nedladdningskälla, eller försöka ladda ner filen senare.
+unblockButtonContinue=Blockera inte ändå
+unblockButtonCancel=Förvara mig säkert
 
 # LOCALIZATION NOTE (sizeWithUnits):
 # %1$S is replaced with the size number, and %2$S with the measurement unit.
