--- a/sv-SE/browser/chrome/browser/loop/loop.properties
+++ b/sv-SE/browser/chrome/browser/loop/loop.properties
@@ -14,6 +14,7 @@ first_time_experience_title={{clientShortname}} — Gå med i konversation
 first_time_experience_button_label=Kom igång
 
 share_link_header_text=Dela denna länk för att bjuda in någon att tala:
+invite_header_text=Bjud in någon.
 
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
@@ -64,6 +65,7 @@ retry_button=Försök igen
 share_email_subject4={{clientShortname}} — Gå med i konversation
 ## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
+share_email_body4=Hej! \n\nGå med i video konversation genom att använda {{clientShortname}}: \n\nDu behöver inte ladda eller installera något. Bara kopiera och klistra in denna URL i din webbläsare:\n\n{{callUrl}} \n\nOm du vill. kan du lära dig mer om {{clientShortname}} på{{learnMoreUrl}} \n\nVi hörs snart!
 share_button=E-post
 copy_url_button=Kopiera
 copy_url_button2=Kopiera länk
@@ -286,6 +288,7 @@ feedback_rejoin_button=Gå åter in
 feedback_report_user_button=Rapportera användare
 
 help_label=Hjälp
+tour_label=Rundtur
 
 ## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
 ## will be replaced by a number. For example "Conversation 1" or "Conversation 12".
@@ -297,8 +300,13 @@ rooms_list_copy_url_tooltip=Kopiera länk
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## We prefer to have no number in the string, but if you need it for your
 ## language please use {{num}}.
+rooms_list_current_conversations=Nuvarande konversation;Nuvarande konversationer
+rooms_list_delete_tooltip=Ta bort konversation
 rooms_list_deleteConfirmation_label=Är du säker?
+rooms_list_no_current_conversations=Inga aktuella konversationer
+rooms_name_this_room_label=Namnge denna konversation
 rooms_new_room_button_label=Starta en konversation
+rooms_only_occupant_label=Du är först här.
 rooms_panel_title=Välj en konversation eller starta en ny
 rooms_room_full_label=Det är redan två person i denna konversation.
 rooms_room_full_call_to_action_nonFx_label=Ladda ner {{brandShortname}} för att starta din egen
