--- a/sv-SE/browser/pdfviewer/viewer.properties
+++ b/sv-SE/browser/pdfviewer/viewer.properties
@@ -146,6 +146,7 @@ loading_error_indicator=Fel
 loading_error=Ett fel uppstod vid laddning av PDF-filen.
 invalid_file_error=Ogiltig eller korrupt PDF-fil.
 missing_file_error=Saknad PDF-fil.
+unexpected_response_error=Oväntat svar från servern.
 
 # LOCALIZATION NOTE (text_annotation_type.alt): This is used as a tooltip.
 # "{{type}}" will be replaced with an annotation type from a list defined in
