Bug 1073865 - Add missing SSL_ERROR l10n strings v1. NOG NIET VERTAALD

--- a/nl/security/manager/chrome/pipnss/nsserrors.properties
+++ b/nl/security/manager/chrome/pipnss/nsserrors.properties
@@ -122,7 +122,7 @@ SSL_ERROR_NEXT_PROTOCOL_DATA_INVALID=SSL ontving ongeldige NPN-extensiegegevens.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SSL2=SSL-functie wordt niet ondersteund voor SSL 2.0-verbindingen.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SERVERS=SSL-functie wordt niet ondersteund voor servers.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_CLIENTS=SSL-functie wordt niet ondersteund voor clients.
-SEC_ERROR_IO=Er is een I/O-fout opgetreden tijdens beveiligingsautorisatie.SSL_ERROR_INVALID_VERSION_RANGE=SSL version range is not valid.
+SSL_ERROR_INVALID_VERSION_RANGE=SSL version range is not valid.
 SSL_ERROR_CIPHER_DISALLOWED_FOR_VERSION=SSL peer selected a cipher suite disallowed for the selected protocol version.
 SSL_ERROR_RX_MALFORMED_HELLO_VERIFY_REQUEST=SSL received a malformed Hello Verify Request handshake message.
 SSL_ERROR_RX_UNEXPECTED_HELLO_VERIFY_REQUEST=SSL received an unexpected Hello Verify Request handshake message.
@@ -134,6 +134,7 @@ SSL_ERROR_INCORRECT_SIGNATURE_ALGORITHM=Incorrect signature algorithm specified 
 SSL_ERROR_NEXT_PROTOCOL_NO_CALLBACK=The next protocol negotiation extension was enabled, but the callback was cleared prior to being needed.
 SSL_ERROR_NEXT_PROTOCOL_NO_PROTOCOL=The server supports no protocols that the client advertises in the ALPN extension.
 SSL_ERROR_INAPPROPRIATE_FALLBACK_ALERT=The server rejected the handshake because the client downgraded to a lower TLS version than the server supports.
+SEC_ERROR_IO=Er is een I/O-fout opgetreden tijdens beveiligingsautorisatie.SSL_ERROR_INVALID_VERSION_RANGE=SSL version range is not valid.
 SEC_ERROR_LIBRARY_FAILURE=fout in beveiligingsbibliotheek.
 SEC_ERROR_BAD_DATA=beveiligingsbibliotheek: onjuiste gegevens ontvangen.
 SEC_ERROR_OUTPUT_LEN=beveiligingsbibliotheek: fout bij uitvoerlengte.
