[ml] update from Pootle (firefox)

--- a/ml/browser/chrome/browser/browser.properties
+++ b/ml/browser/chrome/browser/browser.properties
@@ -100,13 +100,6 @@ popupShowPopupPrefix='%S' കാണിക്കുക
 # Bad Content Blocker Doorhanger Notification
 # %S is brandShortName
 
-# missing plugin installer
-installPlugin.message = ഈ താളിലുള്ള മീഡിയാ പ്രദര്‍ശിപ്പിയ്ക്കുന്നതിനായി നിങ്ങള്‍ക്കു് പ്ലഗിന്‍ ഇന്‍സ്റ്റോള്‍ ചെയ്യണമോ?
-installPlugin.button.label=%S ഇന്‍സ്റ്റോള്‍ ചെയ്യുക
-installPlugin.button.accesskey=ഇ
-installPlugin.ignoreButton.label=ഇനി ഒരിക്കലും ചോദിയ്ക്കരുതു്
-installPlugin.ignoreButton.accesskey=ഇ
-
 crashedpluginsMessage.title=%S പ്ലഗിനു് തകരാറു് സംഭവിച്ചിരിയ്ക്കുന്നു.
 crashedpluginsMessage.reloadButton.label=താള്‍ വീണ്ടും ലഭ്യമാക്കുക
 crashedpluginsMessage.reloadButton.accesskey=ല
@@ -540,13 +533,18 @@ getUserMedia.continueSharing.accesskey = ട
 getUserMedia.stopSharing.label = പങ്കിടുന്നത് നിര്‍ത്തുക
 getUserMedia.stopSharing.accesskey = ക
 
-# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
-#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
-#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
+#                    getUserMedia.sharingMenuMicrophone,
+#                    getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen,
+#                    getUserMedia.sharingMenuWindow,
 #                    getUserMedia.sharingMenuCameraMicrophone,
 #                    getUserMedia.sharingMenuCameraMicrophoneApplication,
 #                    getUserMedia.sharingMenuCameraMicrophoneScreen,
 #                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuCameraApplication,
+#                    getUserMedia.sharingMenuCameraScreen,
+#                    getUserMedia.sharingMenuCameraWindow,
 #                    getUserMedia.sharingMenuMicrophoneApplication,
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
@@ -568,3 +566,9 @@ slowStartup.disableNotificationButton.accesskey = ഇ
 customizeTips.tip0 = %1$S:  നിങ്ങള്‍ക്കാവശ്യമുള്ള രീതിയില്‍ പ്രവര്‍ത്തിയ്ക്കുന്നതിനായി, %2$S യഥേഷ്ടമാക്കാം. മുകളിലുള്ളതിലേതെങ്കിലും മെനു അല്ലെങ്കില്‍ ടൂള്‍ബാറിലേക്കു് വലിച്ചിടുക. %2$S യഥേഷ്ടമാക്കുന്നതിനു് %3$S.
 customizeTips.tip0.hint = സൂചന
 customizeTips.tip0.learnMore = കൂടുതല്‍ അറിയുക
+
+# LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
+# the appmenu labels and buttons that appear when an update is staged for
+# installation or a background update has failed and a manual download is required.
+# %S is brandShortName
+appmenu.restartBrowserButton.label = %S വീണ്ടും ആരംഭിക്കുക
