--- a/ml/dom/chrome/security/security.properties
+++ b/ml/dom/chrome/security/security.properties
@@ -8,8 +8,10 @@ CrossSiteRequestBlocked=ക്രോസ്സ്-ഒറിജിന്‍ ആവ
 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
 InvalidSTSHeaders=തെറ്റായൊരു സ്ട്രിക്റ്റ്-ട്രാന്‍സ്പോര്‍ട്ട്-സെക്യൂരിറ്റി ഹെഡര്‍ സൈറ്റ് നല്‍കിയിരിയ്ക്കുന്നു.
+# LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
 InsecurePasswordsPresentOnPage=അസുരക്ഷിതമായ (http://) തരത്തിലുള്ള താളിലൂടെ രഹസ്യവാക്കിനുള്ള ഫീള്‍ഡുകള്‍ ലഭ്യം. ഉപയോക്താക്കളുടെ പ്രവേശന വിവരങ്ങള്‍ മറ്റുള്ളവര്‍ മോഷ്ടിയ്ക്കാന്‍ സാധ്യതയുണ്ടു്.\u0020
 InsecureFormActionPasswordsPresent=അസുരക്ഷിതമായ (http://) തരത്തിലുള്ള പ്രവര്‍ത്തിയിലൂടെ രഹസ്യവാക്കിനുള്ള ഫീള്‍ഡുകള്‍ ലഭ്യം. ഉപയോക്താക്കളുടെ പ്രവേശന വിവരങ്ങള്‍ മറ്റുള്ളവര്‍ മോഷ്ടിയ്ക്കാന്‍ സാധ്യതയുണ്ടു്.
 InsecurePasswordsPresentOnIframe=അസുരക്ഷിതമായ (http://) iframe-ലൂടെ രഹസ്യവാക്കിനുള്ള ഫീള്‍ഡുകള്‍ ലഭ്യം. ഉപയോക്താക്കളുടെ പ്രവേശന വിവരങ്ങള്‍ മറ്റുള്ളവര്‍ മോഷ്ടിയ്ക്കാന്‍ സാധ്യതയുണ്ടു്.\u0020
 LoadingMixedActiveContent="%1$S" എന്ന സുരക്ഷിത താളില്‍ കൂടികലര്‍ന്ന സജീവ ഉള്ളടക്കം ലഭ്യമാക്കുന്നു
 LoadingMixedDisplayContent="%1$S" എന്ന സുരക്ഷിത താളില്‍ കൂടികലര്‍ന്ന സജീവ ഉള്ളടക്കം ലഭ്യമാക്കുന്നു
+# LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
