--- a/ml/browser/chrome/browser/devtools/webide.properties
+++ b/ml/browser/chrome/browser/devtools/webide.properties
@@ -9,6 +9,10 @@ mainProcess_label=പ്രധാന പ്രക്രിയ
 
 
 
+# LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
+# title for browser tab projects when the tab is still loading.
+project_tab_loading=ലഭ്യമാക്കുന്നു…
+
 # These messages appear in a notification box when an error occur.
 
 
