[ms] update from Pootle (firefox)

--- a/ms/browser/chrome/browser/browser.properties
+++ b/ms/browser/chrome/browser/browser.properties
@@ -100,13 +100,6 @@ popupShowPopupPrefix=Pamer '%S'
 # Bad Content Blocker Doorhanger Notification
 # %S is brandShortName
 
-# missing plugin installer
-installPlugin.message = Adakah anda mahu memasang plugin tambahan yang diperlukan untuk memaparkan media di halaman ini?
-installPlugin.button.label=Pasang %S
-installPlugin.button.accesskey=P
-installPlugin.ignoreButton.label=Jangan tanya lagi
-installPlugin.ignoreButton.accesskey=n
-
 crashedpluginsMessage.title=Plugin %S telah rosak.
 crashedpluginsMessage.reloadButton.label=Muat semula laman
 crashedpluginsMessage.reloadButton.accesskey=M
@@ -540,13 +533,18 @@ getUserMedia.continueSharing.accesskey = T
 getUserMedia.stopSharing.label = Hentikan Perkongsian
 getUserMedia.stopSharing.accesskey = H
 
-# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
-#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
-#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
+#                    getUserMedia.sharingMenuMicrophone,
+#                    getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen,
+#                    getUserMedia.sharingMenuWindow,
 #                    getUserMedia.sharingMenuCameraMicrophone,
 #                    getUserMedia.sharingMenuCameraMicrophoneApplication,
 #                    getUserMedia.sharingMenuCameraMicrophoneScreen,
 #                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuCameraApplication,
+#                    getUserMedia.sharingMenuCameraScreen,
+#                    getUserMedia.sharingMenuCameraWindow,
 #                    getUserMedia.sharingMenuMicrophoneApplication,
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
@@ -568,3 +566,8 @@ slowStartup.disableNotificationButton.accesskey = l
 customizeTips.tip0 = %1$S: Anda boleh menyesuai %2$S untuk bekerja seperti yang anda inginkan. Semudah menyeret mana-mana menu atau bar alatan di atas. %3$S perihal menyesuaikan %2$S.
 customizeTips.tip0.hint = Petunjuk
 customizeTips.tip0.learnMore = Ketahui lanjut
+
+# LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
+# the appmenu labels and buttons that appear when an update is staged for
+# installation or a background update has failed and a manual download is required.
+# %S is brandShortName
