--- a/ms/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/ms/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -98,3 +98,9 @@ quit-button.tooltiptext.linux2 = Keluar %1$S (%2$S)
 quit-button.tooltiptext.mac = Keluar %1$S (%2$S)
 
 
+
+
+web-apps-button.label = Aplikasi
+
+# LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
+# widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
