--- a/ms/browser/chrome/browser/loop/loop.properties
+++ b/ms/browser/chrome/browser/loop/loop.properties
@@ -4,6 +4,12 @@
 
 # Panel Strings
 
+## LOCALIZATION NOTE(clientShortname2): This should not be localized and
+## should remain "Firefox Hello" for all locales.
+
+## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
+## replaced by the brand name
+
 share_link_header_text=Kongsi pautan ini untuk menjemput seseorang untuk bercakap:
 
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
@@ -38,7 +44,7 @@ unable_retrieve_url=Maaf, kami tidak dapat mendapatkan kembali url panggilan.
 ## the appropriate action.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
 
-## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
+## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
 copy_url_button=Salin
 
@@ -59,6 +65,8 @@ contacts_search_placesholder=Carian...
 ## These are the placeholders for the fields for entering a new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## and click the 'New Contact' button to see the fields.
+
+
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
@@ -159,7 +167,6 @@ initiate_audio_video_call_button2=Mula
 ## LOCALIZATION NOTE (retry_call_button, cancel_button, email_link_button):
 ## These buttons are displayed when a call has failed:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
-email_link_button=Emelkan Pautan
 
 cannot_start_call_session_not_ready=Tidak dapat memulakan panggilan, sesi belum bersedia.
 network_disconnected=Sambungan rangkaian ditamatkan tiba-tiba.
@@ -168,9 +175,13 @@ connection_error_see_console_notification=Panggilan gagal; lihat konsol untuk pe
 ## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
 ## parts between {{..}} because these will be replaced with links with the labels
 ## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
-## by the brand name, or fall back to client_shortname_fallback
-  and {{privacy_notice}}.
+## by the brand name.
 legal_text_privacy = Notis Privasi
+
+## LOCALIZATION NOTE (powered_by_beforeLogo, powered_by_afterLogo):
+## These 2 strings are displayed before and after a 'Telefonica'
+## logo.
+powered_by_afterLogo=
 
 feedback_back_button=Kembali
 ## LOCALIZATION NOTE (feedback_window_will_close_in2):
@@ -182,3 +193,15 @@ feedback_back_button=Kembali
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#feedback
 ## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
 ## an abusive user.
+
+help_label=Bantuan
+
+## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
+## will be replaced by a number. For example "Conversation 1" or "Conversation 12".
+rooms_leave_button_label=Pergi
+## LOCALIZATION NOTE (rooms_list_current_conversations):
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## We prefer to have no number in the string, but if you need it for your
+## language please use {{num}}.
+rooms_list_deleteConfirmation_label=Adakah anda pasti?
