--- a/ms/dom/chrome/security/security.properties
+++ b/ms/dom/chrome/security/security.properties
@@ -8,8 +8,10 @@ CrossSiteRequestBlocked=Permintaan Cross-Origin Disekat: Polisi Origin Sama meng
 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
 InvalidSTSHeaders=Tapak yang diberikan tidak sah header Strict-Transport-Security.
+# LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
 InsecurePasswordsPresentOnPage=Medan kata laluan dipersembahkan pada laman (http://) yang tidak selamat. Ini merupakan risiko keselamatan yang membenarkan kelayakan pengguna log masuk dicuri.
 InsecureFormActionPasswordsPresent=Medan kata laluan dipersembahkan pada laman (http://) yang tidak selamat. Ini merupakan risiko keselamatan yang membenarkan kelayakan pengguna log masuk dicuri.
 InsecurePasswordsPresentOnIframe=Medan kata laluan dipersembahkan pada iframe (http://) yang tidak selamat. Ini merupakan risiko keselamatan yang membenarkan kelayakan pengguna log masuk dicuri.
 LoadingMixedActiveContent=Memuatkan kandungan aktif bercampur (tidak selamat) pada laman selamat "%1$S"
 LoadingMixedDisplayContent=Memuatkan kandungan paparan bercampur (tidak selamat) pada laman selamat "%1$S"
+# LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
