[vi] update from Pootle (firefox)

--- a/vi/browser/chrome/browser/browser.properties
+++ b/vi/browser/chrome/browser/browser.properties
@@ -98,9 +98,6 @@ popupShowPopupPrefix=Hiện '%S'
 # Bad Content Blocker Doorhanger Notification
 # %S is brandShortName
 
-# missing plugin installer
-installPlugin.message = Bạn có muốn cài đặt plugin cần thiết để hiển thị media trên trang này không?
-
 crashedpluginsMessage.title=Phần bổ trợ %S đã bị đổ vỡ.
 crashedpluginsMessage.learnMore=Tìm hiểu thêm…
 
@@ -448,13 +445,18 @@ getUserMedia.sharingCamera.message2 = Bạn đang chia sẻ camera với trang n
 getUserMedia.sharingMicrophone.message2 = Bạn đang chia sẻ mic với trang này.
 getUserMedia.sharingCameraAndMicrophone.message2 = Bạn đang chia sẻ camera và mic với trang này.
 
-# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
-#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
-#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
+#                    getUserMedia.sharingMenuMicrophone,
+#                    getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen,
+#                    getUserMedia.sharingMenuWindow,
 #                    getUserMedia.sharingMenuCameraMicrophone,
 #                    getUserMedia.sharingMenuCameraMicrophoneApplication,
 #                    getUserMedia.sharingMenuCameraMicrophoneScreen,
 #                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuCameraApplication,
+#                    getUserMedia.sharingMenuCameraScreen,
+#                    getUserMedia.sharingMenuCameraWindow,
 #                    getUserMedia.sharingMenuMicrophoneApplication,
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
@@ -469,3 +471,9 @@ slowStartup.message = %S có vẻ khởi động khá chậm.
 # LOCALIZATION NOTE(customizeTips.tip0): %1$S will be replaced with the text defined
 # in customizeTips.tip0.hint, %2$S will be replaced with brandShortName, %3$S will
 # be replaced with a hyperlink containing the text defined in customizeTips.tip0.learnMore.
+
+# LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
+# the appmenu labels and buttons that appear when an update is staged for
+# installation or a background update has failed and a manual download is required.
+# %S is brandShortName
+appmenu.restartBrowserButton.label = Khởi động lại %S
