--- a/vi/browser/chrome/browser/devtools/scratchpad.properties
+++ b/vi/browser/chrome/browser/devtools/scratchpad.properties
@@ -32,6 +32,9 @@ openFile.title=Mở Tập Tin
 # open fails.
 openFile.failed=Thất bại khi đọc tập tin.
 
+# LOCALIZATION NOTE  (openFile.failed): This is the message displayed when file
+# open fails.
+
 # LOCALIZATION NOTE (clearRecentMenuItems.label): This is the label for the
 # menuitem in the 'Open Recent'-menu which clears all recent files.
 clearRecentMenuItems.label=Xóa các mục
@@ -76,6 +79,11 @@ browserContext.notification=Scratchpad này chạy trong Trình duyệt.
 
 # LOCALIZATION NOTE (help.openDocumentationPage): This returns a localized link with
 # documentation for Scratchpad on MDN.
+
+# LOCALIZATION NOTE (scratchpad.statusBarLineCol): Line, Column
+# information displayed in statusbar when selection is made in
+# Scratchpad.
+scratchpad.statusBarLineCol  = Dòng %1$S, Cột %2$S
 
 # LOCALIZATION NOTE (fileExists.notification): This is the message displayed
 # over the top of the the editor when a file does not exist.
