--- a/vi/browser/chrome/browser/places/places.properties
+++ b/vi/browser/chrome/browser/places/places.properties
@@ -56,16 +56,17 @@ OrganizerQueryDownloads=Tải xuống
 OrganizerQueryAllBookmarks=Toàn bộ các Trang đánh dấu
 OrganizerQueryTags=Nhãn
 
-# LOCALIZATION NOTE (tagResultLabel) :
+# LOCALIZATION NOTE (tagResultLabel, bookmarkResultLabel, switchtabResultLabel,
+# keywordResultLabel, searchengineResultLabel)
 # Noun used to describe the location bar autocomplete result type
 # to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
+# See createResultLabel() in urlbarBindings.xml
 tagResultLabel=Nhãn
-# LOCALIZATION NOTE (bookmarkResultLabel) :
-# Noun used to describe the location bar autocomplete result type
-# to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
 bookmarkResultLabel=Đánh dấu
+switchtabResultLabel=Tab
+keywordResultLabel=Từ khóa
+searchengineResultLabel=Tìm kiếm
+
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
