--- a/vi/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/vi/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -63,3 +63,10 @@ feed-button.label = Đăng kí
 # LOCALIZATION NOTE(quit-button.tooltiptext.mac): %1$S is the brand name (e.g. Firefox),
 # %2$S is the keyboard shortcut
 
+
+
+
+web-apps-button.label = Ứng dụng
+
+# LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
+# widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
