--- a/vi/dom/chrome/security/security.properties
+++ b/vi/dom/chrome/security/security.properties
@@ -6,3 +6,5 @@ BlockMixedActiveContent = Đã chặn việc tải các nội dung bị trộn l
 # CORS
 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
+# LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
+# LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
