[cy] update from Pootle (mobile)

--- a/cy/mobile/android/chrome/browser.properties
+++ b/cy/mobile/android/chrome/browser.properties
@@ -322,6 +322,10 @@ remoteNotificationGenericName=Ap
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
 remoteNotificationMessage=Gwrando ar borth %S
+# LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+remoteStartNotificationTitle=Gweithredu dadfygio ar gyfer %S
+# LOCALIZATION NOTE (remoteStartNotificationMessage):
+remoteStartNotificationMessage=Cyffwrdd i weithredu'r dadfygiwr pell
 
 # Helper apps
 helperapps.open=Agor
