--- a/cy/mobile/android/chrome/webapp.properties
+++ b/cy/mobile/android/chrome/webapp.properties
@@ -56,4 +56,4 @@ retrievalFailedTitle=Methodd #1 diweddariad;Methodd #1 diweddariad
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Methwyd estyn diweddariad ar gyfer %1$S;Methwyd estyn diweddariadau ar gyfer %1$S
 
-webappsDisabledInGuest=Mae gosod apiau wedi ei atal yn ystod sesiwn gwestai
+webappsDisabled=Mae gosod apiau wedi ei analluogi
