--- a/cy/mobile/android/chrome/handling.properties
+++ b/cy/mobile/android/chrome/handling.properties
@@ -2,6 +2,7 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+download.blocked=Methu llwytho'r ffeil i lawr
 protocol.failed=Methu canfod rhaglen i agor y ddolen
 # A very short string shown in the button toast when no application can open the url
 protocol.toast.search=Chwilio
