[es-MX] update from Pootle (mobile)

--- a/es-MX/mobile/android/chrome/browser.properties
+++ b/es-MX/mobile/android/chrome/browser.properties
@@ -322,6 +322,8 @@ remoteNotificationGenericName=Aplicación
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
 remoteNotificationMessage=Escuchando en el puerto %S
+# LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+# LOCALIZATION NOTE (remoteStartNotificationMessage):
 
 # Helper apps
 helperapps.open=Abrir
