[hi-IN] update from Pootle (mobile)

--- a/hi-IN/mobile/android/chrome/browser.properties
+++ b/hi-IN/mobile/android/chrome/browser.properties
@@ -323,7 +323,9 @@ remoteNotificationGenericName=एप्प
 # the remote debugger server is listening.
 remoteNotificationMessage=%S पोर्ट पर सुन रहा है
 # LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+remoteStartNotificationTitle=%S के लियें दोषसुधार सक्रिय करें
 # LOCALIZATION NOTE (remoteStartNotificationMessage):
+remoteStartNotificationMessage=दूरस्थ डीबगर को सक्रिय करने के लिए स्पर्श करें
 
 # Helper apps
 helperapps.open=खोलें
